<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0d1137"
    tools:context=".MovieDetailedActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        <Button-->
<!--            android:id="@+id/favorite"-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:background="@android:color/transparent"-->
<!--            android:foreground="@drawable/whiteh"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <Button
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#0d1137"
            android:bottomLeftRadius="30dp"
            android:bottomRightRadius="30dp"
            android:foreground="@drawable/pngegg"
            android:topLeftRadius="30dp"
            android:topRightRadius="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/home"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:foreground="@drawable/home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/detailedMoviePoster"
            android:layout_width="0dp"
            android:layout_height="600dp"
            android:alpha="1"
            android:foreground="@drawable/gradient_drawable2"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@id/detailedMovieLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ironman3_lob_crd_01_10" />

        <TextView
            android:id="@+id/ratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="10dp"
            android:text="@string/ratings"
            android:textAlignment="center"
            android:textColor="#FF9800"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/goldenstar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailedMovieLabel" />

        <TextView
            android:id="@+id/dateReleased"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:alpha="0.7"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/ratings"
            app:layout_constraintTop_toBottomOf="@id/detailedMovieLabel" />

        <TextView
            android:id="@+id/deco1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:alpha="0.7"
            android:text="@string/deco"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/dateReleased"
            app:layout_constraintStart_toEndOf="@id/ratings"
            app:layout_constraintTop_toBottomOf="@id/detailedMovieLabel" />

        <TextView
            android:id="@+id/deco2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:alpha="0.7"
            android:text="@string/deco"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/language"
            app:layout_constraintStart_toEndOf="@id/dateReleased"
            app:layout_constraintTop_toBottomOf="@id/detailedMovieLabel" />

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:alpha="0.7"
            android:text="@string/lang"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/dateReleased"
            app:layout_constraintTop_toBottomOf="@id/detailedMovieLabel" />

        <TextView
            android:id="@+id/adult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:alpha="0.7"
            android:fontFamily="@font/blackwidon"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detailedMovieLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/blackwidon"
            android:text="@string/label"
            android:textAlignment="center"
            android:textColor="#e52165"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/detailedMoviePoster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/storyBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/story_line"
            android:textAlignment="textStart"
            android:textColor="#e52165"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailedMovieLabel" />

        <TextView
            android:id="@+id/movieDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:alpha="0.95"
            android:backgroundTint="#2F000000"
            android:fontFamily="sans-serif-light"
            android:justificationMode="inter_word"
            android:text="@string/description"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storyBoard" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>







